Fix text align; align of percentage

--- a/src/main/webapp/app/exercises/programming/hestia/testwise-coverage-report/testwise-coverage-file.component.scss
+++ b/src/main/webapp/app/exercises/programming/hestia/testwise-coverage-report/testwise-coverage-file.component.scss
@@ -4,7 +4,7 @@
 
 .mat-expansion-panel .mat-expansion-panel-body {
     padding: 0 !important;
-    text-align: center;
+    text-align: unset;
 }
 
 .mat-expansion-panel-header-description {
